# otus-cpp-allocator

./: .travis.yml  CMakeLists.txt  custom_list.hpp  lib.cpp  lib.hpp  main.cpp  reserving_allocator.hpp  tests_default.cpp
